[package]
name = "wlt_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
blake2 = "0.10.6"
chrono = "0.4.31"
encoding_rs = "0.8.33"
hex = "0.4.3"
lettre = "0.10.4"
machine-uid = "0.5.1"
reqwest = { version = "0.11.20", features = ["blocking", "cookies"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
urlencoding = "2.1.3"
