[package]
name = "wlt_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.86"
blake2 = "0.10.6"
chrono = "0.4.38"
encoding_rs = "0.8.34"
hex = "0.4.3"
lettre = "0.11.7"
machine-uid = "0.5.2"
reqwest = { version = "0.12.5", features = ["blocking", "cookies"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
urlencoding = "2.1.3"
